Added picam streaming into 5999 port

--- a/html/menu.html
+++ b/html/menu.html
@@ -9,10 +9,14 @@
 					<li class="list-group-item camera_mg"><a href="/"><i
 							class="glyphicon glyphicon-camera"></i>Camera Viewer</a></li>
 
-					<li class="list-group-item camera_mg"><a href="/management"><i
-							class="glyphicon glyphicon-camera"></i>CCTV Management</a></li>
-												
+					<li class="list-group-item cctvview"><a href="/temperature"><i
+							class="glyphicon glyphicon-eye-open"></i>Temperature</a></li>
 
+
+
+							<!-- 
+					<li class="list-group-item camera_mg"><a href="/management"><i
+							class="glyphicon glyphicon-camera"></i>CCTV Management</a></li> -->
 					
 <!-- 						
 					<li class="list-group-item cctvview"><a href="/cctvview"><i
