--- a/html/homecam.html
+++ b/html/homecam.html
@@ -7,6 +7,29 @@
 </head>
 <body>
     <h1>Video Streaming</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <img id="video_feed" src="" width="640" height="480">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
+    <script>
+        const socket = io(); // 웹 소켓 연결
+        const imgElement = document.getElementById("video_feed"); // 이미지 요소 가져오기
+
+        socket.on('connect', () => {
+            console.log('소켓 연결됨');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('소켓 연결 끊김');
+        });
+
+        socket.on('video_frame', (frameData) => {
+            // 이미지 데이터 받아오기
+            const imageData = `data:image/jpeg;base64, ${frameData}`;
+            // 이미지 요소의 src 속성 업데이트
+            imgElement.src = imageData;
+        });
+    </script>
+    
+
+
 </body>
 </html>
