--- a/html/menu.html
+++ b/html/menu.html
@@ -12,6 +12,10 @@
 					<li class="list-group-item cctvview"><a href="/temperature"><i
 							class="glyphicon glyphicon-eye-open"></i>Temperature</a></li>
 
+					<li class="list-group-item cctvview"><a href="/light"><i
+							class="glyphicon glyphicon-eye-open"></i>Light Control</a></li>
+	
+
 
 
 							<!-- 
