added on recording led

--- a/html/menu.html
+++ b/html/menu.html
@@ -7,10 +7,10 @@
 					
 
 					<li class="list-group-item camera_mg"><a href="/"><i
-							class="glyphicon glyphicon-camera"></i>Camera Viewer</a></li>
+							class="glyphicon glyphicon-facetime-video"></i>Camera Viewer</a></li>
 
-					<li class="list-group-item cctvview"><a href="/temperature"><i
-							class="glyphicon glyphicon-eye-open"></i>Temperature</a></li>
+					<li class="list-group-item eventlog"><a href="/temperature"><i
+							class="glyphicon glyphicon-home"></i>Temperature</a></li>
 
 					<li class="list-group-item cctvview"><a href="/light"><i
 							class="glyphicon glyphicon-eye-open"></i>Light Control</a></li>
