--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
 							<ul id="myTab" class="nav nav-pills nav-justified">
 
 								<li class="active"><a href="#Wallpad" data-toggle="tab">Wall Pad Viewer</a></li>
-								<li><a href="#Homecam" data-toggle="tab">Home Cam Viewer</a></li>
+								<!-- <li><a href="#Homecam" data-toggle="tab">Home Cam Viewer</a></li> -->
 							</ul>
 						</div>
 						<!-- Tab Menu End-->
