--- a/html/menu.html
+++ b/html/menu.html
@@ -8,12 +8,14 @@
 
 					<li class="list-group-item camera_mg"><a href="/"><i
 							class="glyphicon glyphicon-facetime-video"></i>Camera Viewer</a></li>
+					<li class="list-group-item camera_mg"><a href="/log"><i
+						class="glyphicon glyphicon-list"></i>Log</a></li>
 
-					<li class="list-group-item eventlog"><a href="/temperature"><i
+					<!-- <li class="list-group-item eventlog"><a href="/temperature"><i
 							class="glyphicon glyphicon-home"></i>Temperature</a></li>
 
 					<li class="list-group-item cctvview"><a href="/light"><i
-							class="glyphicon glyphicon-eye-open"></i>Light Control</a></li>
+							class="glyphicon glyphicon-eye-open"></i>Light Control</a></li> -->
 	
 
 
