Added get log event, log_manager.js

--- a/html/log.html
+++ b/html/log.html
@@ -65,7 +65,10 @@
                                     <div class="content-row">
                                         <div>
                                             <button id="log_refresh" onclick="log_refresh_btn_onClick()" style="display: block;">REFRESH</button>
-                                            <p>When the switch is set to auto, the lighting system is operated by the PIR sensor. Otherwise, the lighting system operates under user control.</p>
+                                            <br/>
+                                            <br/>
+                                            <br/>
+                                            <p id = "log_area">When the switch is set to auto, the lighting system is operated by the PIR sensor. Otherwise, the lighting system operates under user control.</p>
                                         </div>
                                         <!-- <div class="col-md-12" style="display: flex; align-items: center;">
 										</div> -->
